@@ -1241,9 +1241,10 @@ SQL
 
     # preserve version and checkout status
     my %preserve = (
-        version        => $self->{version},
-        checked_out_by => $self->{checked_out_by},
-        checked_out    => $self->{checked_out}
+        version          => $self->{version},
+        checked_out_by   => $self->{checked_out_by},
+        checked_out      => $self->{checked_out},
+        deployed_version => $self->{deployed_version}
     );
 
     # get old version
