@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Fixed minor but disconcerting bug where reverting a template to an
+earlier version also reverted its "Deployed Version". [Noam Weinstein]
+
+=item *
+
 At the request of Jesse Erlbaum, added a Size selector to
 Default::image. [Bodo Schulze]
 
